  *  - Moved the Pipe and Endpoint stream related code to two new USB library core source files EndpointStream.c and PipeStream.c
  *  - Added board hardware driver support for the Olimex AVR-USB-162 development board (thanks to Steve Fawcett)
  *  - Added board hardware driver support for the USBFOO development board
  *
  *  <b>Changed:</b>
  *  - Removed complicated logic for the Endpoint_ConfigureEndpoint() function to use inlined or function called versions
  *    depending of if the given bank size is a compile time constant, as the compiler does a better job of optimizing
  *    with basic code
  *  - Changed over all device demos to use a clearer algorithm for the configuring of the application's endpoints
  *  - Added missing DataflashManager_CheckDataflashOperation() function to the MassStorageKeyboard demo, removed redundant
  *    SCSI_Codes.h file as these values are part of the MassStorage Class Driver
  *  - Added compile time error to the AVRISP-MKII project when built for the U4 chips, as the default VTARGET detection ADC channel
  *    does not exist on these chips (thanks to Marco)
  *  - Changed all Device mode LowLevel demos and Device Class drivers so that the control request is acknowledged and any data
  *    transferred as quickly as possible without any processing inbetween sections, so that long callbacks or event handlers will
  *    not break communications with the host by exceeding the maximum control request stage timeout period
  *  - Changed the signature of the CALLBACK_USB_GetDescriptor() callback function so that the descriptor pointer is const, to remove
  *    the need for extra casting inside the callback (thanks to Jonathan Kollasch)
  *  - Reduced HOST_DEVICE_SETTLE_DELAY_MS to 1000ms down from 1500ms to improve device compatibility while in USB Host mode
  *
  *  <b>Fixed:</b>
  *  - Fixed USB_GetHIDReportItemInfo() function modifying the given report item's data when the report item does not exist